--- a/maps.ui
+++ b/maps.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>495</height>
+    <width>600</width>
+    <height>518</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -30,7 +30,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
+      <y>50</y>
       <width>600</width>
       <height>450</height>
      </rect>
@@ -46,7 +46,7 @@
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>90</y>
+      <y>140</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -67,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>50</y>
+      <y>100</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -88,7 +88,7 @@
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>10</y>
+      <y>60</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -105,21 +105,34 @@
    <widget class="QLineEdit" name="search_line">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>10</x>
       <y>10</y>
-      <width>241</width>
+      <width>481</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="search_btn">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>10</y>
-      <width>41</width>
-      <height>31</height>
+      <x>489</x>
+      <y>9</y>
+      <width>53</width>
+      <height>33</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>🔎</string>
@@ -128,14 +141,19 @@
    <widget class="QPushButton" name="delete_btn">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>50</y>
-      <width>241</width>
-      <height>31</height>
+      <x>549</x>
+      <y>9</y>
+      <width>43</width>
+      <height>33</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>Сброс результата</string>
+     <string>🔃</string>
     </property>
    </widget>
   </widget>
@@ -144,8 +162,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>900</width>
-     <height>26</height>
+     <width>600</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
