--- a/maps_2.ui
+++ b/maps_2.ui
@@ -6,24 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>950</width>
-    <height>495</height>
+    <width>1050</width>
+    <height>505</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1</width>
-    <height>1</height>
+    <width>1050</width>
+    <height>505</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1170</width>
-    <height>123123</height>
+    <width>1050</width>
+    <height>505</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>Maps_API</string>
+   <string>YandexMaps</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Triangular</enum>
@@ -62,6 +62,9 @@
       <pointsize>13</pointsize>
      </font>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="text">
      <string>🚘</string>
     </property>
@@ -82,6 +85,9 @@
      <font>
       <pointsize>13</pointsize>
      </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
      <string>🛰️</string>
@@ -104,6 +110,9 @@
       <pointsize>13</pointsize>
      </font>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="text">
      <string>🗺️</string>
     </property>
@@ -111,21 +120,44 @@
    <widget class="QLineEdit" name="search_line">
     <property name="geometry">
      <rect>
-      <x>660</x>
+      <x>700</x>
       <y>10</y>
-      <width>241</width>
+      <width>301</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+      <stylestrategy>PreferDefault</stylestrategy>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::StrongFocus</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string>Поиск...</string>
     </property>
    </widget>
    <widget class="QPushButton" name="search_btn">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>10</y>
-      <width>41</width>
-      <height>31</height>
+      <x>999</x>
+      <y>9</y>
+      <width>43</width>
+      <height>33</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
      <string>🔎</string>
@@ -135,23 +167,45 @@
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>50</y>
-      <width>241</width>
+      <y>10</y>
+      <width>31</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="text">
-     <string>Сброс результата</string>
+     <string>🔃</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="full_address">
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>100</y>
-      <width>256</width>
-      <height>91</height>
+      <y>50</y>
+      <width>381</width>
+      <height>211</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="lineWidth">
+     <number>1</number>
     </property>
    </widget>
    <widget class="QPushButton" name="post_index">
@@ -160,8 +214,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>200</y>
+      <x>1000</x>
+      <y>220</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -173,6 +227,9 @@
     </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
      <string>📫</string>
@@ -188,12 +245,18 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>950</width>
+     <width>1050</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
