Yandex_Maps_can_search_everything_in_the_world

--- a/development/maps_1.ui
+++ b/development/maps_1.ui
@@ -125,6 +125,19 @@
      <string>🔎</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="delete_btn">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>50</y>
+      <width>241</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сброс результата</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
